--- a/index.html
+++ b/index.html
@@ -14,21 +14,30 @@
   <title>Alan Turing</title>
 </head>
 
+<!-- Top Section -->
+
 <body id="main">
+  <!-- freeCodeCamp Link -->
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
   <div class="heading">
     <h1 id="title">Alan Turing</h1>
     <h4 style="color: #D1E8E2;">The man who helped crack Nazi codes and established the field of artifical intelligence
     </h4>
   </div>
+
+  <!--Image Section  -->
   <div id="img-div">
     <figure>
-      <img id="image" src="images/AlanTuring_center.jpg" alt="Alan turing seated in center">
+      <img id="image" class="alan-image" src="images/AlanTuring_center.jpg" width="600" height="400"
+           alt="Alan turing seated in center">
       <figcaption id="img-caption">This 1930 photo provided by the Sherborne School in Sherborne, England, shows members
         of Westcott House, including <br>Alan Turing, center, who went to become a World War II codebreaker and
         computing pioneer.</figcaption>
     </figure>
   </div>
+
+  <!-- Body Section -->
   <div id="tribute-info">
     <h3>Here's a time line of Alan Turing's life:</h3>
 
@@ -61,13 +70,17 @@
         using their Enigma machines. The Bombe built on a machine that the Polish had already made, called the Bomba
         Kryptlogiczna. Turing used statistical techiques to optimise the trial of different possiblities in the
         code-breaking process using probability.</li>
+
       <div>
+        <!-- Image -->
         <figure>
           <img id="image" class="image2" src="images/computerbyalanturing.jpeg" alt="computer by Alan Turing">
           <figcaption id="img-caption" class="fig-caption2">This is Bombe, the machine designed by Turing during World
             War II<br> to decipher German enigma codes.</figcaption>
         </figure>
       </div>
+
+
       <li><strong>1941</strong> - Turing proposes to his co-worker Joan Clarke, a fellow mathematician and cryptanalyst.
         Shortly after, Turing had second thoughts, admitting to his fiancee that he was homosexual.</li>
       <li><strong>1942</strong> - Turing sent to the US as part of an intelligence collaboration. He shared what he knew
@@ -114,12 +127,16 @@
         Brown makes a public apology saying the treatment of Alan Turing was "appalling".</li>
     </ul>
   </div>
+
+  <!-- Quote Section -->
   <div class="quote">
     <blockquote cite="https://iperceptive.com/authors/alan_turing_quotes.html">
       <p>"We can only see a short distance ahead, but we can see plenty there that needs to be done."</p>
       <cite>-- Alan Turing</cite>
     </blockquote>
   </div>
+
+  <!--Quote Section-->
   <footer>
     <h4><a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Turing" target="_blank">Learn more about Alan
         Turing</a></h4>
