--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;700&family=Montserrat:wght@200;300;400&display=swap"
         rel="stylesheet">
-  <title>Alan Turing</title>
+  <title>A Tribute to Alan Turing</title>
 </head>
 
 <!-- Top Section -->
