--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
   <div id="img-div">
     <figure>
       <img id="image" class="alan-image" src="images/Alan-turing.jpg" width="500" height="600" alt="Alan Turing Photo">
-      <figcaption id="img-caption">This 1930 photo provided by the Sherborne School in Sherborne, England, shows members
-        of Westcott House, including <br>Alan Turing, center, who went to become a World War II codebreaker and
-        computing pioneer.</figcaption>
+      <figcaption id="img-caption">Alan Turing</figcaption>
     </figure>
   </div>
 
@@ -70,84 +68,93 @@
         Kryptlogiczna. Turing used statistical techiques to optimise the trial of different possiblities in the
         code-breaking process using probability.</li>
 
-      <div>
+  </div>
 
 
 
-        <!-- Image -->
-        <figure>
-          <img id="image" class="image2" src="images/computerbyalanturing.jpeg" alt="computer by Alan Turing">
-          <figcaption id="img-caption" class="fig-caption2">This is Bombe, the machine designed by Turing during World
-            War II<br> to decipher German enigma codes.</figcaption>
-        </figure>
+  <!-- Image -->
+  <figure>
+    <img id="image" class="image2" src="images/computerbyalanturing.jpeg" alt="computer by Alan Turing">
+    <figcaption id="img-caption" class="fig-caption2">This is Bombe, the machine designed by Turing during World
+      War II<br> to decipher German enigma codes.</figcaption>
+  </figure>
 
-        <div>
+  <div>
 
-
-          <li><strong>1941</strong> - Turing proposes to his co-worker Joan Clarke, a fellow mathematician and
-            cryptanalyst.
-            Shortly after, Turing had second thoughts, admitting to his fiancee that he was homosexual.</li>
-          <li><strong>1942</strong> - Turing sent to the US as part of an intelligence collaboration. He shared what he
-            knew
-            about Enigma in return for being allowed to inspect the speech encryption system being set up to allow
-            conversations between Churchill and Roosevelt. Turing was somewhat dismissive of US cryptanalysis, believing
-            the
-            Americans to rely too heavily on machinery instead of thought.</li>
-          <li><strong>1941-43</strong> - Turing and colleagues manage to break the more complicated German Naval Enigma
-            system. This is extremely helpful for the Allies during the Battle of the Atlantic as it could help them
-            avoid
-            the fearsome German U-boats, which had been responsible for sinking more than 700 Allied ships with 2.3
-            million
-            tons of vital cargo.</li>
-          <li><strong>1945</strong> - Turing joined the National Physical Laboratory where he worked on developing an
-            electronic digital stored-program computing machine that would later become the ACE (Automatic Computing
-            Engine). By 1946, he had a finished proposal for the computer, but NPL did not have the resources to turn it
-            into reality.</li>
-          <li><strong>1947</strong> - Turing returned to Cambridge for a sabbatical year. The Pilot ACE was built in his
-            absence and executed its first program on 10 May 1950.</li>
-          <li><strong>1949</strong> - Turing became deputy director of the Computing Laboratory at Manchester
-            University,
-            working on software for one of the earliest stored program computers - the Manchester Mark1. He also
-            epxlored
-            the problem of artifical intelligence and proposed an experiment (in his seminal paper <i>Computing
-              Machinery
-              and Intelligence)</i> which became that attempted to define a standard for machine intelligence, which
-            would
-            later become known as the Turing test. The core idea was that a computer could be said to "think" if a human
-            interrogator could not tell it apart, through conversation, from a human being. Turing also worked with a
-            his
-            former colleague D G Champernowne on a chess program for a computer that did not exist yet.</li>
-          <li><strong>1952</strong> - Without a computer powerful enough to execute his chess program, Turing played a
-            game
-            in which he simulated the computer, taking about half an hour to perform each move. The program lost to
-            Turing's
-            colleague Alick Glennie, but won against Champernowne's wife.</li>
-          <li><strong>January 1952</strong> - Turing meets a man called Arnold Murray and invites him over to his house.
-            Murray visits Turing's house on a number of occasions, staying the night. Murray later helps an accomplice
-            break
-            into Turing's house. Turing reports the crime and admits having a sexual relationship with Murray.
-            Homosexual
-            acts are illegal in the UK and so both were charged with gross indecency. Turing is given the choice of
-            being
-            imprisoned or chemically castrated with oestrogen hormone injections. He chooses the latter. Turing's
-            conviction
-            means his security clearance is removed which means he is barred from his cryptopgraphic consultancy for the
-            British government.</li>
-          <li><strong>June 1954</strong> - Alan's body is found in his home in Wilmslow, Cheshire. The post-mortem finds
-            that his death had been caused by poisoning. A half-eaten apple is found next to him laced with cyanide.
-          </li>
-          <li><strong>1986</strong> - A play, Breaking the Code, about Alan's life and work opens in the West End with
-            Derek
-            Jacobi playing Alan.</li>
-          <li><strong>1998</strong> - A Blue Plaque is unveiled at Turing's birthplace in Warrington Crescent, London
-            (now
-            the Colonnade Hotel).</li>
-          <li><strong>2001</strong> - A statue of Alan Turing is unveiled in Sackville Gardens, Manchester.</li>
-          <li><strong>2004</strong> - A memorial plaque is unveiled at his last home in Wilmslow, Cheshire.</li>
-          <li><strong>2007</strong> - A slate sculpture of Alan Turning is unveiled at Bletchley Park.</li>
-          <li><strong>2009</strong> - In response to a petition signed by thousands of people, the Prime Minister,
-            Gordon
-            Brown makes a public apology saying the treatment of Alan Turing was "appalling".</li>
+    <ul>
+      <li><strong>1941</strong> - Turing proposes to his co-worker Joan Clarke, a fellow mathematician and
+        cryptanalyst.
+        Shortly after, Turing had second thoughts, admitting to his fiancee that he was homosexual.</li>
+      <li><strong>1942</strong> - Turing sent to the US as part of an intelligence collaboration. He shared what
+        he
+        knew
+        about Enigma in return for being allowed to inspect the speech encryption system being set up to allow
+        conversations between Churchill and Roosevelt. Turing was somewhat dismissive of US cryptanalysis,
+        believing
+        the
+        Americans to rely too heavily on machinery instead of thought.</li>
+      <li><strong>1941-43</strong> - Turing and colleagues manage to break the more complicated German Naval
+        Enigma
+        system. This is extremely helpful for the Allies during the Battle of the Atlantic as it could help them
+        avoid
+        the fearsome German U-boats, which had been responsible for sinking more than 700 Allied ships with 2.3
+        million
+        tons of vital cargo.</li>
+      <li><strong>1945</strong> - Turing joined the National Physical Laboratory where he worked on developing an
+        electronic digital stored-program computing machine that would later become the ACE (Automatic Computing
+        Engine). By 1946, he had a finished proposal for the computer, but NPL did not have the resources to turn
+        it
+        into reality.</li>
+      <li><strong>1947</strong> - Turing returned to Cambridge for a sabbatical year. The Pilot ACE was built in
+        his
+        absence and executed its first program on 10 May 1950.</li>
+      <li><strong>1949</strong> - Turing became deputy director of the Computing Laboratory at Manchester
+        University,
+        working on software for one of the earliest stored program computers - the Manchester Mark1. He also
+        epxlored
+        the problem of artifical intelligence and proposed an experiment (in his seminal paper <i>Computing
+          Machinery
+          and Intelligence)</i> which became that attempted to define a standard for machine intelligence, which
+        would
+        later become known as the Turing test. The core idea was that a computer could be said to "think" if a
+        human
+        interrogator could not tell it apart, through conversation, from a human being. Turing also worked with a
+        his
+        former colleague D G Champernowne on a chess program for a computer that did not exist yet.</li>
+      <li><strong>1952</strong> - Without a computer powerful enough to execute his chess program, Turing played a
+        game
+        in which he simulated the computer, taking about half an hour to perform each move. The program lost to
+        Turing's
+        colleague Alick Glennie, but won against Champernowne's wife.</li>
+      <li><strong>January 1952</strong> - Turing meets a man called Arnold Murray and invites him over to his
+        house.
+        Murray visits Turing's house on a number of occasions, staying the night. Murray later helps an accomplice
+        break
+        into Turing's house. Turing reports the crime and admits having a sexual relationship with Murray.
+        Homosexual
+        acts are illegal in the UK and so both were charged with gross indecency. Turing is given the choice of
+        being
+        imprisoned or chemically castrated with oestrogen hormone injections. He chooses the latter. Turing's
+        conviction
+        means his security clearance is removed which means he is barred from his cryptopgraphic consultancy for
+        the
+        British government.</li>
+      <li><strong>June 1954</strong> - Alan's body is found in his home in Wilmslow, Cheshire. The post-mortem
+        finds
+        that his death had been caused by poisoning. A half-eaten apple is found next to him laced with cyanide.
+      </li>
+      <li><strong>1986</strong> - A play, Breaking the Code, about Alan's life and work opens in the West End with
+        Derek
+        Jacobi playing Alan.</li>
+      <li><strong>1998</strong> - A Blue Plaque is unveiled at Turing's birthplace in Warrington Crescent, London
+        (now
+        the Colonnade Hotel).</li>
+      <li><strong>2001</strong> - A statue of Alan Turing is unveiled in Sackville Gardens, Manchester.</li>
+      <li><strong>2004</strong> - A memorial plaque is unveiled at his last home in Wilmslow, Cheshire.</li>
+      <li><strong>2007</strong> - A slate sculpture of Alan Turning is unveiled at Bletchley Park.</li>
+      <li><strong>2009</strong> - In response to a petition signed by thousands of people, the Prime Minister,
+        Gordon
+        Brown makes a public apology saying the treatment of Alan Turing was "appalling".</li>
     </ul>
   </div>
 
@@ -161,7 +168,8 @@
 
   <!--Quote Section-->
   <footer>
-    <h4><a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Turing" target="_blank">Learn more about Alan
+    <h4><a id="tribute-link" href="https://en.wikipedia.org/wiki/Alan_Turing" target="_blank">Learn more about
+        Alan
         Turing</a></h4>
   </footer>
 
