--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 	<main id="main">
 		<h1 id="title">Alan Turing</h1>
 		<div id="img-div">
-			<img src="images/Alan-turing.jpg" alt="Alan Turing" id="image">
+			<img src="images/Alan-turing.jpg" width="500" height="700" alt="Alan Turing" id="image">
 			<figcaption id="img-caption">The man who helped crack Nazi codes and established the field of artifical
 				intelligence</figcaption>
 		</div>
